# HuskyControl

./: .gitignore  CMakeLists.txt  README.md  cones53.yaml  path53.yaml  pathh.yaml
Guides/: README.md
cones_publisher/: package.xml
cones_publisher/src/: cones_publisher.cpp  cones_publisher.h
husky_mpcc/: CMakeLists.txt  README.md  package.xml
husky_mpcc/ToMove/: husky_eufs.launch
husky_mpcc/launch/: husky_medium_track.launch  husky_mpcc.launch  slow2fast.launch  slow2fastPipeline.launch
husky_mpcc/rviz/: mpcc_rviz_config.rviz
husky_mpcc/src/: config.h  install.sh  main.cpp  types.cpp  types.h
husky_mpcc/src/Constraints/: bounds.cpp  constraints.cpp  constraints.h
husky_mpcc/src/Cost/: cost.cpp  cost.h
husky_mpcc/src/Interfaces/: hpipm_interface.cpp
husky_mpcc/src/MPC/: mpc.cpp  mpc.h
husky_mpcc/src/Model/: model.cpp  model.h
husky_mpcc/src/Params/: bounds.json  config.json  cost.json  model.json  normalization.json  params.cpp  params.h  track.cpp  track.csv  track.json  track_alex.json  track_dennis.json  workingconfig
husky_mpcc/src/Plotting/: plotting.cpp  plotting.h
husky_mpcc/src/ROSnode/: fastlapnode.cpp  fastlapnode.h
husky_terminal_control/: CMakeLists.txt  README.md  package.xml
husky_terminal_control/Guides/: Parameters
husky_terminal_control/launch/: TC_follower.launch  husky_terminal_control.launch
husky_terminal_control/src/: main.cpp  terminalcontrol.cpp  terminalcontrol.h
launch/: husky_terminal_control.launch
mur_common/: CMakeLists.txt
mur_common/msg/: map_msg.msg
path_follower_husky/: CMakeLists.txt  README.md  package.xml
path_follower_husky/launch/: follower_husky.launch
path_follower_husky/rviz/: rviz_config.rviz  rviz_config2.rviz
path_follower_husky/src/: follower_husky.cpp  follower_husky.h
path_publisher/: CMakeLists.txt  package.xml
path_publisher/launch/: path_pub.launch
path_publisher/src/: path0.csv  path_publisher.cpp
race_tracks/: cones_big_map.yaml  cones_map4.yaml  cones_map5.yaml  cones_map6.yaml
slowlap_planner/launch/: slowlap_planner.launch
slowlap_planner/src/: main.cpp  node.cpp  node.h  path_planner.cpp  path_planner.h  path_point.h
src/: main.cpp  terminalcontrol.cpp
