<?xml version="1.0"?>
<package format="2">
  <name>husky_mpcc</name>
  <version>1.1.0</version>
  <description>Husky MPCC package, heavily based on Alex Liniger's code</description>
  <maintainer email="khengyu_061192@hotmail.com">Kheng Yu Yeoh</maintainer>
  <license>Apache-2.0</license>
  <author email="khengyu_061192@hotmail.com">Kheng Yu Yeoh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mur_common</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
